--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^3.2.0",
     "path": "^0.12.7",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "style-loader": "^1.0.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.2.1"
   }
