--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.2.1"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.1.2"
   }
 }
