--- a/package.json
+++ b/package.json
@@ -1,44 +1,35 @@
 {
-  "name": "regulondb-component-repository",
-  "version": "0.0.32",
-  "description": "RegulonDB UI ComponentRepository",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/regulondb/Component-Repository.git"
-  },
-  "author": "CCG-UNAM RegulonDB",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/regulondb/Component-Repository/issues"
-  },
-  "homepage": "https://github.com/regulondb/Component-Repository#readme",
-  "peerDependencies": {
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^3.2.0",
-    "path": "^0.12.7",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.2.1"
-  },
+  "name": "ui-components",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "material-icons": "^0.3.1",
-    "react-router-dom": "^5.1.2"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
